<resources>
    <string name="app_name">My Wallet</string>
    <string name="day">day</string>
    <string name="week">week</string>
    <string name="mounth">month</string>
    <string name="year">year</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="rub">RUB.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="choose_date">Choose Date</string>

    <!--categories -->
    <string name="car">Car</string>
    <string name="sport">Sport</string>
    <string name="eat">Eat</string>
    <string name="health">Health</string>
    <string name="home">Home</string>
    <string name="transport">Transport</string>
    <string name="clothes">Clothes</string>
    <string name="cafe">Cafe</string>
    <string name="fun">Fun</string>
    <string name="pets">Pets</string>
    <string name="hygiene">Hygiene</string>
    <string name="phone">Phone</string>
    <string name="deposite">Deposite</string>
    <string name="salary">Salary</string>
    <string name="saving">Saving</string>
</resources>
