<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="150dp"
    android:layout_height="match_parent">
    <Button
        android:layout_margin="8dp"
        android:background="@drawable/shape_button_rect"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/day"/>

    <Button
        android:layout_margin="8dp"
        android:background="@drawable/shape_button_rect"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/week"/>

    <Button
        android:background="@drawable/shape_button_rect"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/mounth"/>
    <Button
        android:layout_weight="1"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/year"
        android:background="@drawable/shape_button_rect"/>
    <Button
        android:id="@+id/btn_nav_date_chose"
        android:layout_margin="8dp"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_date"
        android:drawableTop="@drawable/ic_calendar_black_24dp"
        android:background="@drawable/shape_button_rect" />

</LinearLayout>